crates/libs/frieze/tests/ui/option_of_maybe.rs
use frieze::{Maybe, Schema};

#[derive(Schema)]
struct S {
    x: Option<Maybe<String>>,
}

fn main() {}
